Update console output in index.html

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExenk0aG5xeGtpNWI1YTFsbWdnYn
         </span>
 
         <span class="console-line" style="margin-top:0px;">
-            <span class="green">Espanol :</span> المرة الجاية بخليك ترجع بونيشر<br>
-            :) يابن القحبة انت وياه يلا يازنوة
+            <span class="green">Espanol :</span>  pb حياكم الله الديسكورد<br>
+            :) كيف تصير زاحف وفحل مثلي 
         </span>
     </div>
 
